# NLang_TGBot

./: Dockerfile  README.md  config.toml  nlang_bot.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
