[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlang-tgbot"
version = "0.1.0"
description = "Telegram bot for querying NLang abbreviations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "python-telegram-bot>=20.7",
  "httpx>=0.26.0",
  "tomli>=2.0.1",
]

[tool.setuptools]
py-modules = ["nlang_bot"]

